[gd_scene load_steps=3 format=3 uid="uid://drx1hbvf3fkl4"]

[ext_resource type="Script" path="res://Scenes/Scripts/settings_screen.gd" id="1_fhynk"]
[ext_resource type="Theme" uid="uid://ccgqjg61ykiio" path="res://knife_project_theme.tres" id="1_o02sa"]

[node name="SettingsScreen" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_fhynk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o02sa")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0605303, 0.0605304, 0.0605303, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="SettingsText" type="BoxContainer" parent="Control/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="RichTextLabel" type="RichTextLabel" parent="Control/ColorRect/VBoxContainer/SettingsText"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "[center][b]JIMMY'S SETTINGS[/b][/center]"

[node name="MainVolume" type="VBoxContainer" parent="Control/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 6

[node name="RichTextLabel" type="RichTextLabel" parent="Control/ColorRect/VBoxContainer/MainVolume"]
clip_contents = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "[center][b]MAIN VOLUME[/b][/center]"

[node name="MainVolumeSlider" type="HSlider" parent="Control/ColorRect/VBoxContainer/MainVolume"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="HSeparator" type="HSeparator" parent="Control/ColorRect/VBoxContainer/MainVolume"]
layout_mode = 2

[node name="MusicVolume" type="VBoxContainer" parent="Control/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 6

[node name="RichTextLabel" type="RichTextLabel" parent="Control/ColorRect/VBoxContainer/MusicVolume"]
clip_contents = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "[center][b]MUSIC VOLUME[/b][/center]"

[node name="MusicSlider" type="HSlider" parent="Control/ColorRect/VBoxContainer/MusicVolume"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="HSeparator" type="HSeparator" parent="Control/ColorRect/VBoxContainer/MusicVolume"]
layout_mode = 2

[node name="SoundVolume" type="VBoxContainer" parent="Control/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 6

[node name="RichTextLabel" type="RichTextLabel" parent="Control/ColorRect/VBoxContainer/SoundVolume"]
clip_contents = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "[center][b]SOUND VOLUME[/b][/center]"

[node name="SoundSlider" type="HSlider" parent="Control/ColorRect/VBoxContainer/SoundVolume"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="HSeparator" type="HSeparator" parent="Control/ColorRect/VBoxContainer/SoundVolume"]
layout_mode = 2

[node name="FullScreenToggle" type="VBoxContainer" parent="Control/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 6

[node name="FullScreenBox" type="CheckBox" parent="Control/ColorRect/VBoxContainer/FullScreenToggle"]
layout_mode = 2
text = "   FULL SCREEN"

[node name="HSeparator" type="HSeparator" parent="Control/ColorRect/VBoxContainer/FullScreenToggle"]
layout_mode = 2

[node name="LeaveSettingsButton" type="Button" parent="Control/ColorRect/VBoxContainer"]
layout_mode = 2
text = "EXIT SETTINGS"

[connection signal="value_changed" from="Control/ColorRect/VBoxContainer/MainVolume/MainVolumeSlider" to="." method="_on_main_volume_slider_value_changed"]
[connection signal="value_changed" from="Control/ColorRect/VBoxContainer/MusicVolume/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Control/ColorRect/VBoxContainer/SoundVolume/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="toggled" from="Control/ColorRect/VBoxContainer/FullScreenToggle/FullScreenBox" to="." method="_on_full_screen_box_toggled"]
[connection signal="pressed" from="Control/ColorRect/VBoxContainer/LeaveSettingsButton" to="." method="_on_leave_settings_button_pressed"]
